--- a/css/mobile/_tablette.scss
+++ b/css/mobile/_tablette.scss
@@ -294,7 +294,10 @@
 		top: 40px;
 	}
 
-
+	.bookmarked-apps{
+		display: none;
+	}
+	
 	.account{
 		.avatar + h2{
 			margin: 25px 0 45px 100px;
